--- a/todo.org
+++ b/todo.org
@@ -3,10 +3,12 @@
 ** Broad strokes
 * DONE Setup test accounts with pictures
 * DONE List all photos in one account
+* DONE Login with prime account (Auth0)
+* TODO Define sprnklr prime account to associate to a set of remote accounts -> auth0
 * TODO Storage of multiple accounts
 * TODO Transfer files from one account to another
 
 ** Access Handling
-* TODO real caching for refresh tokens
+* DONE real caching for refresh tokens
 * TODO Interface for different backend systems (just googs for now)
 
