--- a/todo.org
+++ b/todo.org
@@ -1,29 +1,34 @@
 # Todo list for Sprnkler
 
 ** General 
-* DONE Setup test accounts with pictures
-* DONE List all photos in one account
-* DONE Login with sprnklr account (Auth0)
-* DONE Define sprnklr account to associate to a set of remote accounts
-* DONE Storage of multiple accounts
-* DONE Split client and server (web?)
+* DONE #1 Setup test accounts with pictures
+* DONE #2 List all photos in one account
+* DONE #3 Login with sprnklr account (Auth0)
+* DONE #4 Define sprnklr account to associate to a set of remote accounts
+* DONE #5 Storage of multiple accounts
+* DONE #6 Split client and server (web?)
+* DONE #7 Generate link_id for sprnklr -> tpy id mapping
 
 ** server
-* DONE Server 
-* DONE List photos based on account type
-* TODO Define a primary account
-* TODO Ability to copy file from one account to another
-* TODO Implement data caps/limits
-* TODO Next page api / pagination
+* DONE #8 Server 
+* DONE #9 List photos based on account type
+* DONE #10 Define a primary account
+* TODO #11 Ability to copy file from one account to another
+* TODO #12 Implement data caps/limits
+* TODO #13 Next page api / pagination
 
 ** client
-* DONE Client sprnklr login
-* DONE Client sprnklr add account
-* DONE Client sprnklr show photos
-* DONE Rudimentary display of photos (react)
+* DONE #14 Client sprnklr login
+* DONE #15 Client sprnklr add account
+* DONE #16 Client sprnklr show photos
+* DONE #17 Rudimentary display of photos (react)
 
 
 ** Access Handling
-* DONE real caching for refresh tokens
-* DONE Interface for different backend systems (just googs for now)
-* DONE cleanup sprnklr account def
+* DONE #18 real caching for refresh tokens
+* DONE #19 Interface for different backend systems (just googs for now)
+* DONE #20 cleanup sprnklr account def
+
+
+** Copy file from one account to another
+* TODO #21 API call that take source, dest, and photo id
